# ssre

./: README.md
ansible/: install_docker.yml  k8s_install_software.yml  upgrade_apt_packages.yml
elasticsearch/: README.md
fluentd/: Dockerfile  README.md  fluentd.conf
kibana/: run_kibana.yml
kibana/config/: kibana.yml
python_tools/askr/: .main.py.swp  main.py  pyproject.toml
