[tool.poetry]
name = "askr"
version = "0.1.0"
description = "ASKR is a simple load balancer checker for websites"
authors = ["fooser <fooser@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.6.2"
requests = "^2.22.0"
requests-async = "^0.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
